[package]
name = "websocket-test"
version = "0.1.0"
authors = ["T0mstone <realt0mstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
native-tls = "0.2.7"
simple_logger = "1.11.0"
tokio = { version = "1.6.0", features = ["full"] }
tokio-tungstenite = { version = "0.14.0", features = ["native-tls"] }
